# flask_bookmark_app

./: .pre-commit-config.yaml  LICENSE  README.md  config.py  pyproject.toml  wsgi.py
flask_bookmark_app/: __init__.py  app.py
tests/: test_app.py
